# Voxelmap

./: README.md  README2.md  setup.cfg  test_a.py  test_b.py  test_c.py  test_d.py  test_e.py  train.py  train2.py  train_a.py  train_all.sh  train_all2.sh  train_b.py  train_c.py  train_d.py  train_e.py  tutorial.ipynb  validate.py  validate2.py
utilities/: activations.py  layers.py  losses.py  modelio.py  network_a.py  network_b.py  network_c.py  network_d.py  network_e.py  networks.py  networks2.py  spatialTransform.py
