[metadata]
name = voxelmap
author = Nicholas Hindley
author_email = nicholas.hindley@sydney.edu.au
description = A deep learning framework for patient-specific 3D intrafraction motion modelling and volumetric imaging
long_description = file: README.md
keywords = image-guided radiotherapy, motion management, volumetric imaging, deep learning
license = MIT
pct_filing = WO2023215936A1
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    time
    os
    numpy
    matplotlib.pyplot
    torch
    skimage.metrics
